# json-search

./: .gitignore  README.md
client/: Makefile  README.md  json-search.py  json_search.py  requirements.txt  setup.cfg  setup.py  stable-req.txt
client/jsearch/: base_search_index.py  indexing_helper.py  json_search.py  list.py  output_helper.py  search.py  search_index.py  untokenized_search_index.py
client/lib/: indexing.py
client/tests/: test_json_search.py
client/tests/jsearch/: test_base_search_index.py  test_search_index.py  test_untokenized_search_index.py
server/: README.md
server/elasticsearch/: Dockerfile
server/logstash/pipeline/: logstash.conf
