[metadata]
description-file = README.md

[flake8]
max-line-length = 100
max-complexity = 10
output-file = flake8_output.txt
tee = True
jobs = 4
show_source = True
ignore = D104, D401
exclude = *venv, setup.py

[isort]
not_skip = __init__.py
known_first_party = jsearch
multi_line_output = 3
skip_glob = *venv

[nosetests]
cover-package = jsearch
cover-erase = True
cover-min-percentage = 90